<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ImageView
        android:id="@+id/funclublogo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernamelayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/funclublogo_login" />

    <LinearLayout
        android:id="@+id/usernamelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/edittextbg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            style="@style/style_edittext"
            android:drawableLeft="@drawable/icon_username"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/sap" />

        <EditText
            android:id="@+id/password"
            style="@style/style_edittext"
            android:drawableLeft="@drawable/icon_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernamelayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/forgotpassword"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/btnlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotpassword"
        android:background="@color/edittextbg"
        android:weightSum="2">

        <TextView
            android:id="@+id/btnlogin"
            style="@style/stylebtn"
            android:background="@color/loginbg"
            android:text="@string/login" />

        <TextView
            android:id="@+id/btnsignup"
            style="@style/stylebtn"
            android:text="@string/signup" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlayout"
        android:layout_margin="25dp"
        android:gravity="center"
        android:orientation="horizontal">
<!--<ImageView
    android:id="@+id/share"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/share_button"/>-->
        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginButton_facebook"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <ImageView
            android:id="@+id/fb"
            style="@style/socialbtn"
            android:background="@drawable/icon_fb_hov" />


        <ImageView
            android:id="@+id/google"
            style="@style/socialbtn"
            android:background="@drawable/google_icon" />


    </LinearLayout>


</RelativeLayout>
