<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@drawable/login_bg">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Forgot Password"
                android:paddingLeft="6dp"
                android:textSize="20dp"
                android:id="@+id/title"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/forgot_desc"
                android:textSize="@dimen/_10sdp"
                android:maxLines="3"
                android:id="@+id/text_desp"
                android:textColor="@color/white"/>



            <LinearLayout
                android:id="@+id/signupdetai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email"
                    style="@style/style_edittext"
                    android:drawableLeft="@drawable/icon_email"
                    android:hint="@string/email"
                    android:textColor="@color/edittextbg"
                    android:textColorHint="@color/edittextbg" />

                <View style="@style/styleview" />

            </LinearLayout>





    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/r_layout1"
        android:elevation="5dp">

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/loginbg"
            android:padding="10dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/loginbg"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"/>


    </RelativeLayout>

        </LinearLayout>

</RelativeLayout>
