<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/feed_item_margin"
        android:orientation="vertical"
        android:background="@drawable/bg"
        android:paddingBottom="@dimen/feed_item_padding_top_bottom"
        android:paddingTop="@dimen/feed_item_padding_top_bottom" >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/feed_item_padding_left_right"
            android:paddingRight="@dimen/feed_item_padding_left_right">

            <ImageView
                android:src="@drawable/defaultavatar"
                android:id="@+id/userprofilePic"
                android:background="@drawable/imageborder"
                android:layout_width="@dimen/feed_item_profile_pic"
                android:layout_height="@dimen/feed_item_profile_pic"
                android:scaleType="fitCenter"
                >
            </ImageView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/feed_item_profile_info_padd" >

                <TextView
                    android:id="@+id/username"
                    android:textColor="@color/white"
                    android:text="John Doe"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:textStyle="bold" />

                <EditText
                    android:focusable="true"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="true"
                    android:id="@+id/userstatusedittext"
                    android:hint="@string/status_hint"
                    android:textColorHint="@color/white"
                    android:textAlignment="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:backgroundTint="@color/Transparent"
                    android:textSize="@dimen/feed_item_timestamp"
                    android:layout_marginBottom="@dimen/_2sdp"/>


                <ImageView
                    android:id="@+id/userloadimageview"
                    android:hint="@string/status_hint"
                    android:textColorHint="@color/white"
                    android:textAlignment="center"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:backgroundTint="@color/Transparent"
                    android:textSize="@dimen/feed_item_timestamp"
                    android:layout_marginBottom="@dimen/_2sdp"/>




            </LinearLayout>






        </LinearLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:src="@drawable/ic_add_a_photo_white_24dp"
                android:textColor="@color/white"
                android:background="@drawable/buttonlayout"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/postpicturebtn"
                android:text="@string/Picture"
                android:textAllCaps="false"
                android:padding="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_13sdp"


                />


            <ImageButton

                android:src="@drawable/ic_video_call_white_24dp"
                android:textColor="@color/white"
                android:background="@drawable/buttonlayout"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/postvideobtn"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_toEndOf="@+id/postpicturebtn"
                android:text="@string/Video"
                android:textAllCaps="false"
                android:padding="@dimen/_15sdp"
                android:layout_toRightOf="@+id/postpicturebtn" />

            <Button

                android:textColor="@color/white"
                android:background="@drawable/buttonlayout"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_25sdp"
                android:id="@+id/postonwallbtn"
                android:layout_alignParentEnd="true"
                android:text="@string/Post"
                android:textAllCaps="false"
                android:layout_marginRight="@dimen/_13sdp"

                android:layout_alignParentRight="true" />



        </RelativeLayout>

        <View
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/white"/>


        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp" />

    </LinearLayout>


</LinearLayout>

